--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://media.discordapp.net/attachments/1333152561083060234/1333187005148037151/IMG_7376.jpg?ex=6797faa7&is=6796a927&hm=2816ccca73ef2c564f3b7bdfa644b5ede710b1ccbee19d1efbe672c5f8992190&=&format=webp&width=556&height=416');
+            background: url('https://media.discordapp.net/attachments/1333152561083060234/1333559097303371837/IMG_7376.png?ex=67995531&is=679803b1&hm=470c18924c435f288010b64fe85589cc0f80b1396bb7d9dfd0a0fa96a02ebd04&=&format=webp&quality=lossless&width=444&height=332');
             background-size: cover;
             z-index: -1;
         }
@@ -231,7 +231,7 @@
     <canvas id="backgroundCanvas"></canvas>
     <div class="container">
         <img 
-            src="https://media.discordapp.net/attachments/1333152561083060234/1333188915267375188/IMG_7377.png?ex=6797fc6e&is=6796aaee&hm=8ad2c104ad500b639f0b87c260f82abca28df242d1fd04cc4939070da98adc99&=&format=webp&quality=lossless&width=329&height=416" 
+            src="https://media.discordapp.net/attachments/1333152561083060234/1333559097559351356/IMG_7377.png?ex=67995531&is=679803b1&hm=717dfb1cf047f308871e8d5176ee7d65c678d6f1ad774adc656e28d9d3a1c8f4&=&format=webp&quality=lossless&width=263&height=332" 
             class="gif"
         >
         <div class="text" id="welcome-text">Bem-vindo ao meu portfólio!</div>
